[tool.poetry]
name = "wedding"
version = "0.1.0"
description = ""
authors = ["bc30138 <sasori.axele@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.1"
psycopg2-binary = "^2.9.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.2"}
jinja2 = "^3.1.2"
httpx = "^0.23.3"
asyncpg = "^0.27.0"
alembic = "^1.9.2"
aiocsv = "^1.2.3"
python-multipart = "^0.0.5"
apyio = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
