[tool.poetry]
name = "wedding"
version = "0.1.0"
description = ""
authors = ["bc30138 <sasori.axele@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.11"
fastapi = "0.89.1"
uvicorn = "0.20.0"
python-dotenv = "0.21.1"
psycopg2-binary = "2.9.5"
sqlalchemy = {extras = ["asyncio"], version = "2.0.2"}
jinja2 = "3.1.2"
httpx = "0.23.3"
asyncpg = "0.27.0"
alembic = "1.9.2"
aiocsv = "1.2.3"
python-multipart = "0.0.5"
apyio = "0.2.0"
pyyaml = "6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.1.0"
flake8 = "6.0.0"
flake8-pyproject = "1.2.2"
flake8-blind-except = "0.2.1"
flake8-bandit = "4.1.1"
flake8-comprehensions = "3.10.1"
flake8-mutable = "1.2.0"
flake8-bugbear = "23.2.13"
flake8-print = "5.0.0"
flake8-logging-format = "0.9.0"
flake8-builtins = "2.1.0"
flake8-useless-assert = "0.4.4"
flake8-unused-arguments = "0.0.13"
flake8-class-attributes-order = "0.1.3"
flake8-return = "1.2.0"
flake8-scream = "0.1.0"
flake8-pytest-style = "1.7.2"
flake8-pie = "0.16.0"
pytest = "7.2.1"
pytest-asyncio = "0.20.3"
factory-boy = "3.2.1"


[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )
)
'''


[tool.flake8]
max-line-length = 120
inline-quotes = "double"
multiline-quotes = "double"

builtins-ignorelist = ["id"]
# S101 Use of assert detected. The enclosed code will be removed when compiling to optimised byte code
per-file-ignores = [
    "tests/*:S101, U101",
]
# R505 unnecessary else after return statement
# B008 Do not perform function calls in argument defaults (FastAPI injection)
# R504 unnecessary variable assignment before return statement.
# S311 Standard pseudo-random generators are not suitable for security/cryptographic purposes.
# PT012 pytest.raises() block should contain a single simple statement
# PT019 fixture without value is injected as parameter, use @pytest.mark.usefixtures instead
# G202 Logging statement has redundant exc_info
ignore = ["R505", "B008", "R504", "S311", "PT012", "PT019", "G202"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["wedding"]
log_cli_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_cli = true
log_cli_level = "INFO"


[tool.isort]
known_first_party = "wedding"
profile = "black"
line_length = 120


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disable_error_code = "misc, override"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
